<resources>
    <string name="app_name">Aston–dev-2_3</string>

    <string name="edittext_uri">https://astondevs.ru/</string>
    <string name="button_uri">Open Website</string>

    <string name="edittext_loc">Moscow</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">Ваше сообщение</string>
    <string name="button_share">Share This Text</string>

    <string name="button_photo">Take a Picture</string>
    <string name="share_text_with">\"Share this text with: \"</string>
</resources>